# Jnana

./: pyproject.toml  requirements.txt
config/: config.yaml
jnana/core/: jnana_system.py  model_manager.py
jnana/protognosis/agents/: __init__.py  generation_agent.py  recommender_agent.py  specialized_agents.py
jnana/protognosis/core/: agent_core.py  coscientist.py  inference_auth_token.py  llm_interface.py  multi_llm_config.py
jnana/protognosis/utils/: data_converter.py  jnana_adapter.py
jnana/tools/: __init__.py  bindcraft_tool.py  tool_registry.py
readmes/: INSTALL.md
