[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jnana"
version = "0.1.0"
description = "AI Co-Scientist with Interactive Hypothesis Generation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ProtoGnosis Team", email = "team@protognosis.ai"}
]
maintainers = [
    {name = "ProtoGnosis Team", email = "team@protognosis.ai"}
]
keywords = [
    "ai",
    "research",
    "hypothesis-generation",
    "scientific-research",
    "multi-agent",
    "llm",
    "protein-engineering",
    "structural-biology"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Framework :: AsyncIO",
]

dependencies = [
    # Core dependencies
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.0.0",
    
    # LLM integrations
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "ollama>=0.1.0",
    
    # Async and concurrency
    "asyncio-mqtt>=0.13.0",
    "aiofiles>=23.0.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    
    # Data processing
    "orjson>=3.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # UI and terminal
    "rich>=13.0.0",
    "textual>=0.40.0",
    
    # PDF generation
    "reportlab>=4.0.0",
    
    # Database (optional but included)
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Logging and monitoring
    "structlog>=23.0.0",
    "prometheus-client>=0.17.0",
    
    # Configuration and environment
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    
    # Performance
    "cachetools>=5.3.0",
    "redis>=4.6.0",
    
    # Biomni integration with LangChain
    "biomni",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "ruff>=0.1.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
]

all = [
    "jnana[dev,docs,test]",
]

[project.urls]
Homepage = "https://github.com/acadev/Jnana"
Documentation = "https://github.com/acadev/Jnana/blob/main/README.md"
Repository = "https://github.com/acadev/Jnana"
Issues = "https://github.com/acadev/Jnana/issues"

[project.scripts]
jnana = "jnana.jnana:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jnana*"]
exclude = ["tests*", "examples*", "docs*", "jnana-web*"]

[tool.setuptools.package-data]
jnana = [
    "config/*.yaml",
    "config/*.example.yaml",
    "py.typed",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | jnana-web
  | jnana-web-demo
  | jnana-web-live
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["jnana-web/*", "jnana-web-demo/*", "jnana-web-live/*"]

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "biomni.*",
    "langchain.*",
    "langgraph.*",
    "faiss.*",
    "textual.*",
    "reportlab.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "biomni: marks tests that require biomni",
    "llm: marks tests that require LLM API access",
]

# coverage configuration
[tool.coverage.run]
source = ["jnana"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/jnana-web/*",
    "*/jnana-web-demo/*",
    "*/jnana-web-live/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ruff configuration (modern linter/formatter)
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "jnana-web",
    "jnana-web-demo",
    "jnana-web-live",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # allow unused imports and redefinitions in tests

